resolved payment and other miner paypal issues

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,7 +29,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script
-      src="https://www.paypal.com/sdk/js?client-id=Abj42AxcZhJyhZh6mP_TJRK0C_ms8gtYnw0ejf_FYK4ANFWqk-99_uBMFPVTQ-nc4YzWjFTXlbYR7QfE"
+      src="https://www.paypal.com/sdk/js?currency=GBP&client-id=Abj42AxcZhJyhZh6mP_TJRK0C_ms8gtYnw0ejf_FYK4ANFWqk-99_uBMFPVTQ-nc4YzWjFTXlbYR7QfE"
       crossorigin="anonymous"
     ></script>
     <div id="root"></div>
